# acpp11-502_exercises

./: README.md
.github/workflows/: build-host.yaml
patch-files/: CMakePresets.json  build-one.sh
solutions/01-user-defined-types/src/: Alarm.cpp  Alarm.h
solutions/01_User_defined_types/src/: Alarm.cpp  main.cpp
solutions/02-functions-constants/src/: Alarm.h  main.cpp
solutions/02-functions-constants/tests/: CMakeLists.txt  alarm_tests.cpp
solutions/02_Associations/: CMakeLists.txt
solutions/02_Associations/.devcontainer/: devcontainer.json
solutions/02_Associations/src/: Alarm.cpp  Alarm.h  Display.cpp  Generator.cpp  debug.h  main.cpp
solutions/03-circular-buffer/src/: Buffer.h
solutions/03_Interfaces/src/: Display.h  Generator.cpp  Pipe.h  Pipeline.h  main.cpp
solutions/03_Interfaces/tests/: CMakeLists.txt  Pipeline_tests.cpp
solutions/04-algorithms/src/: Alarm.cpp  Alarm.h  Buffer.cpp  Buffer.h  main.cpp
solutions/04-algorithms/tests/: CMakeLists.txt
solutions/04_Containers/src/: Alarm.cpp  Alarm.h  Alarm_list.cpp  Alarm_list.h  Display.cpp  Generator.cpp  Generator.h  Pipeline.cpp  Pipeline.h  main.cpp
solutions/05-composite-objects/src/: Alarm.cpp  Buffer.h
solutions/05-composite-objects/tests/: CMakeLists.txt
solutions/05_Callable_objects/src/: Alarm.cpp  Alarm.h  Alarm_filter.cpp  Alarm_list.cpp  Alarm_list.h  Display.cpp  Display.h  Generator.cpp  Generator.h  Pipe.cpp  Pipe.h  Pipeline.h  main.cpp
solutions/06-connecting-objects/src/: Alarm.h  AlarmFilter.h  Display.h  Generator.cpp  Generator.h  Pipe.h
solutions/06-connecting-objects/tests/: Alarm_tests.cpp  buffer_tests.cpp
solutions/06_Resource_management/: CMakeLists.txt
solutions/06_Resource_management/src/: Alarm.cpp  Alarm.h  Alarm_filter.cpp  Alarm_filter.h  Generator.cpp  Generator.h  main.cpp
solutions/07_Move_semantics/: .clang-tidy
solutions/07_Move_semantics/src/: Alarm.cpp  Alarm.h  Alarm_filter.cpp  Alarm_filter.h  Alarm_list.cpp  Alarm_list.h  Display.cpp  Generator.cpp  Pipe.cpp  Pipe.h  main.cpp
solutions/08-move-semantics/src/: Alarm.cpp  Alarm.h  AlarmFilter.cpp  Buffer.cpp  Buffer.h  main.cpp
solutions/08-move-semantics/tests/: buffer_tests.cpp
solutions/08_Smart_pointers/src/: Alarm_filter.h  Alarm_list.h  Generator.cpp  Pipe.cpp  Pipe.h  main.cpp
solutions/09-smart-pointers/src/: Alarm.cpp  Alarm.h  AlarmFilter.h  Buffer.cpp  Buffer.h  Generator.cpp  Pipe.cpp  Pipe.h
solutions/09-smart-pointers/tests/: buffer_tests.cpp
solutions/09_Template_classes/src/: Alarm.cpp  Alarm_filter.cpp  Buffer.h  Pipe.cpp  Pipe.h  main.cpp
solutions/10-deep-copy/: Buffer.cpp  Buffer.h  main.cpp
solutions/10-templates/src/: Buffer.h
solutions/10-templates/tests/: buffer_tests.cpp
solutions/10_Perfect_forwarding/src/: Alarm_filter.h  Buffer.h  Display.cpp  Display.h  Generator.cpp  debug.h
solutions/11-perfect-forwarding/src/: Alarm.h  Buffer.h
solutions/11-perfect-forwarding/tests/: CMakeLists.txt  alarm_tests.cpp  pipe_tests.cpp
solutions/11-templates/src/: AlarmFilter.cpp  Buffer.h  Display.cpp  Pipe.cpp  Pipe.h  main.cpp
solutions/11_Threading/src/: Alarm.h  Alarm_filter.cpp  Alarm_filter.h  Buffer.h  Display.cpp  Display.h  (+6 more)
(+34 files in other folders)
